istio/workloadEntry.yaml
# serviceEntry 将pod和workload Entry发布出去
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata: 
    name: foo
spec: 
    hosts:
        - foo.com
    ports:
        - name: http-defaule
          number: 80
          protocol: HTTP
          targetPort: 80
    resolution: STATIC
    workloadSelector: # 会同时选择有这个标签的workloadEntry和pod
        labels:
            run: foo
