istio/灰度发布.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: canary
spec:
  hosts:
    - canary
  http:
    - match:  #也可以设置7层代理，使用rewrite等
        - headers:  # 有三种匹配模式，uri、headers、sourceLabel
            user:  # user是jesse的走v2
              exact: jesse
      route:
        - destination:
            host: canary
            subset: v2
    - route:  # 没有被match匹配到的走route
      - destination:
          host: canary
          subset: v1
      timeout: 3s  # 超时时间3s ，超过3s就断开
      retries:  # 返回500错误时会触发
        attemps: 3  # 重试次数
        perTryTimeout: 2s  # 每次重试的间隔
      fault: # 故障注入,80%请求返回500错误
        abort: 
          httpStatus: 500
          percentage: 80
        delay:   # 增加延迟 比例10%，延迟5s
          percent: 10 
          fixedDelay: 5
      mirror:  # 镜像一份给v2
        host: canary
        subset: v2 
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: canary
spec:
  host: canary
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
    - name: v1  # 将v1和v2两个标签分成两个部分，v1的负载均衡是随机，v2轮询
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
      trafficPolicy:
        loadBalancer:
          simple: ROUND_ROBIN
